--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -128,20 +128,19 @@
   border-radius: 5px;
 }
 .delete-button {
-  border: 1px solid red;
+  border: 1px solid rgb(223, 56, 56);
   background: white;
-  color: red;
+  color: rgb(223, 56, 56);
   transition: all 0.3s ease-in;
 }
 .delete-button:hover {
-  border: 1px solid white;
-  background: red;
+  background: rgb(223, 56, 56);
   color: white;
   transition: all 0.3s ease-in;
 }
 .close-button {
-  border: 1px solid red;
-  background: red;
+  border: 1px solid rgb(223, 56, 56);
+  background: rgb(223, 56, 56);
 }
 .popup-icon {
   padding: 15px;
@@ -169,5 +168,58 @@
   margin-bottom: 50px;
   font-size: 18px;
 }
+.textarea-content:disabled {
+  background-color: white;
+}
+@media screen and (max-width: 1024px) {
+  .container-left {
+    width: 60%;
+  }
+  .container-right {
+    width: 40%;
+  }
+  .textarea-content {
+    min-height: 300px;
+    padding-top: 30px;
+  }
+}
 @media screen and (max-width: 820px) {
+  .wrapper {
+    flex-direction: column;
+    margin-top: 200px;
+  }
+  .container-left {
+    width: 100%;
+    height: 100%;
+  }
+  .container-right {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+  }
+  .container-right--top {
+    order: 2;
+  }
+  .container-right--bottom {
+    order: 1;
+    margin-bottom: 40px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .content-label {
+    font-size: 20px;
+  }
+  .header-container {
+    height: 140px;
+    flex-direction: column;
+  }
+  .wrapper {
+    height: 400px;
+  }
+  .container {
+    padding: 50px 30px;
+  }
+  .textarea-content {
+    padding-top: 35px;
+  }
 }
