--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,13 +184,13 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-  gap: 50px;
+  gap: 10px;
   margin: 20px 0;
 }
 .container-spin--list,
 .container-sort--list,
 .container-delete--list {
-  width: calc(100% / 4);
+  width: calc(100% / 3);
 }
 .container-timer--spin {
   width: 100%;
@@ -206,7 +206,7 @@
   outline: none;
 }
 .btn-action {
-  width: 100%;
+  /* width: 100%; */
   padding: 15px 20px;
   /* border: 1px solid lightgray; */
   text-align: center;
@@ -214,7 +214,10 @@
   border-radius: 10px;
   background-size: 200% auto;
   transition: 0.5s;
+  color: white;
+  font-weight: bold;
 }
+
 .spin-btn {
   background-image: linear-gradient(
     to right,
@@ -222,11 +225,46 @@
     #fda085 51%,
     #f6d365 100%
   );
-  color: white;
-  font-weight: bold;
 }
-.spin-btn:hover {
+.btn-action:hover {
   background-position: right center;
+}
+.sort-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+.btn-sort--img {
+  margin-left: 5px;
+  width: 22px;
+  height: 22px;
+}
+.sort-random--btn {
+  background-image: linear-gradient(
+    to right,
+    #fbc2eb 0%,
+    #a6c1ee 51%,
+    #fbc2eb 100%
+  );
+}
+.sort-alphabet--btn {
+  background-image: linear-gradient(
+    to right,
+    #a1c4fd 0%,
+    #c2e9fb 51%,
+    #a1c4fd 100%
+  );
+}
+.btn-delete {
+  background-image: linear-gradient(
+    to right,
+    #fd6e6e 0%,
+    #fbc2c2 51%,
+    #fc6f6f 100%
+  );
+}
+.unpointer-event {
 }
 @media screen and (max-width: 1024px) {
   .container-left {
@@ -243,7 +281,7 @@
 @media screen and (max-width: 820px) {
   .wrapper {
     flex-direction: column;
-    margin-top: 200px;
+    margin-top: 300px;
   }
   .container-left {
     width: 100%;
@@ -272,6 +310,7 @@
   }
   .wrapper {
     height: 400px;
+    margin-top: 400px;
   }
   .container {
     padding: 50px 30px;
